# srrg_semantic_extraction_trigger

./: CMakeLists.txt  README.md  package.xml
src/: CMakeLists.txt
src/examples/: CMakeLists.txt  srrg_semantic_extraction_trigger_example.cpp
src/srrg_semantic_extraction_trigger/: CMakeLists.txt  cloud_generator.cpp  cloud_generator.h  clusters_extractor.cpp  clusters_extractor.h  semantic_extraction_trigger.cpp  semantic_extraction_trigger.h  structure_analyzer.cpp  structure_analyzer.h
